Prevent user from scrolling on iphone

--- a/common/styles.css
+++ b/common/styles.css
@@ -11,6 +11,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: skyblue;
+  height: 100vh;
 }
 
 #content {
